# nori-a2a-agent

./: important.txt  main.py  pyproject.toml  requirements.txt
app/: a2a.py  config.py  models.py  news_client.py  nlu.py  summarizer.py  telex_client.py  utils.py
app/services/: news.py
nori_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
