[project]
name = "nori-agent"
version = "0.1.0"
description = "Nori — A2A news summarization agent for Telex.im"
requires-python = ">=3.11"

# ✅ MUST be an array, not key-value map
dependencies = [
    "fastapi>=0.95",
    "uvicorn[standard]>=0.22",
    "httpx>=0.25",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.16",
    "loguru>=0.7",
    "orjson>=3.9",
    "tenacity>=8.2",
]

[project.scripts]
nori = "main:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
